--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "homebridge": ">=1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.6.0",
     "homebridge": "^1.1.2",
     "node-fetch": "^2.6.0",
     "rxjs": "^6.6.2"
+  },
+  "dependencies": {
+    "@string-bean/drayton-wiser-client": "^0.1.1"
   }
 }
