--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "homebridge-drayton-wiser",
+  "name": "@string-bean/homebridge-drayton-wiser",
+  "displayName": "Homebridge Drayton Wiser",
   "version": "0.1.0",
   "description": "Homebridge plugin for Drayton Wiser heating systems",
   "author": "Michael Stringer",
@@ -27,7 +28,7 @@
   ],
   "main": "dist/index.js",
   "dependencies": {
-    "@string-bean/drayton-wiser-client": "^0.1.1"
+    "@string-bean/drayton-wiser-client": "^0.1.2"
   },
   "devDependencies": {
     "@tsconfig/node10": "^1.0.7",
