--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@string-bean/homebridge-drayton-wiser",
   "displayName": "Homebridge Drayton Wiser",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Homebridge plugin for Drayton Wiser heating systems",
   "author": "Michael Stringer",
   "license": "Apache-2.0",
@@ -24,7 +24,8 @@
   },
   "files": [
     "src",
-    "dist"
+    "dist",
+    "config.schema.json"
   ],
   "main": "dist/index.js",
   "dependencies": {
